@@ -21,13 +21,13 @@ EBUILD libdrm-2.4.18.ebuild 1112 RMD160 685e5e3cbbf0f71dd4572f5eb0f40d8374c829b3
 EBUILD libdrm-2.4.18_pre20100211-r1.ebuild 1282 RMD160 49852dc840bb3926962178210e118c64f39428be SHA1 253b47837fb7ad2a919380f374fcb8d83cd6f695 SHA256 39796d5987254d94c6818899ed9ee5d9c6f3ac84a13438a13b2f017f06be2cf0
 EBUILD libdrm-2.4.18_pre20100211.ebuild 1129 RMD160 a11bbd10c51eb382841dca4cc9f187d5c70df428 SHA1 9c67caecfcda79a595d8a17ec908293e6cd4b67d SHA256 57fb476ee18022161219c9503ad37eba8773512932137e1ff9a176ba9aad796d
 EBUILD libdrm-2.4.19.ebuild 1157 RMD160 33616037c5d4dfbcb7ecef4347223cc62d6883dc SHA1 08669dc6973253ee74bcc7006fae0c8a3510dab8 SHA256 5ec6eee1696bccd73ab928b77590dbe3f85f407a2aed52c9e7dd8c3a97247da3
-EBUILD libdrm-2.4.20.ebuild 1157 RMD160 8393288fa9a8d18f569f73c7c857f92c27c45fa8 SHA1 c114837397e8b9c0f67c6d7cdc720b0434fe5e03 SHA256 620768b32933b0b4707bca563025e9eebba8de00227670abf3a3ff0c8df544aa
-MISC ChangeLog 15042 RMD160 403b1160654eea1d324500f2e362d42ce7f57efb SHA1 8a76bc78e09493d535b9bfae787bd4a73309ff9d SHA256 2e52e56ac3c8971ff8b150cd68567051c7714fa75fc6bf929c3d54586bbeabd0
+EBUILD libdrm-2.4.20.ebuild 1206 RMD160 adb157b681f6749525d9e9355fbc9e0b66d57d93 SHA1 191c152d09c087d941d6319efef675f847bd0f6f SHA256 23a9a6e3b36a5407d8bbb853fdcb21c5e5c34c2798f55ff45960bfa29179d2fb
+MISC ChangeLog 15233 RMD160 65f27735fe14f102dfa3d13d7af85fd4fb73b107 SHA1 2b9e91874c9bf3cb1421db0cf21c71df0cb1ebac SHA256 92a756dd91912dba85c864c9d9f19b59b8db724e5eda839027d2cfbbdf77c660
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAku+/xkACgkQNQqtfCuFnePO8QCdEYI4FriFIE3LvNGQ03I0IRqW
-8yUAoIagTdVUy/Z7pLlc8Kl7jd5cXHi+
-=onLX
+iEYEARECAAYFAkvERAoACgkQvFcC4BYPU0rf3QCfVfoeftBlfSfCij+eJXNvUTp8
+m+IAmgKB1Ng5V8pIldQet4csuunVA5KN
+=3/cz
 -----END PGP SIGNATURE-----
