@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/libdrm-2.4.20.ebuild,v 1.1 2010/04/03 16:10:15 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/libdrm-2.4.20.ebuild,v 1.2 2010/04/13 10:14:28 aballier Exp $
 
 inherit x-modular
 
@@ -15,7 +15,7 @@ else
 fi
 
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
-IUSE=""
+IUSE="kernel_linux"
 RESTRICT="test" # see bug #236845
 
 RDEPEND="dev-libs/libpthread-stubs"
@@ -26,6 +26,7 @@ pkg_setup() {
 	CONFIGURE_OPTIONS="--enable-udev
 			--enable-nouveau-experimental-api
 			--enable-vmwgfx-experimental-api
+			$(use_enable kernel_linux libkms)
 			$(use_enable !arm intel)
 			$(use_enable !arm radeon)"
 }
