@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libdrm
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.109 2010/04/09 10:18:59 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.110 2010/04/13 10:14:28 aballier Exp $
+
+  13 Apr 2010; Alexis Ballier <aballier@gentoo.org> libdrm-2.4.20.ebuild:
+  Disable KMS on non linux systems, bug #314827, suggested by Naohiro Aota
+  <naota@elisp.net> and acked by remi
 
   09 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
   libdrm-2.4.18_pre20100211-r1.ebuild:
